# DON'T EDIT THIS!
#
# Codecrafters relies on this file being intact to run tests successfully. Any changes
# here will not reflect when CodeCrafters tests your code, and might even cause build
# failures.
#
# DON'T EDIT THIS!
[package]
name = "bittorrent-starter-rust"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"

# DON'T EDIT THIS!
#
# Codecrafters relies on this file being intact to run tests successfully. Any changes
# here will not reflect when CodeCrafters tests your code, and might even cause build
# failures.
#
# DON'T EDIT THIS!
[dependencies]
anyhow = "1.0.68"                                                  # error handling
clap = { version = "4.0.32", features = ["derive"]}                # creating a cli
hex = "0.4.3"
reqwest = { version = "0.11.18", features = ["json"] } # http requests
serde = { version = "1.0.136", features = ["derive"] }             # for json mangling
serde_bencode = "0.2.3"                                            # for bencode encoding/decoding
serde_json = "1.0.105"                                             # for json mangling
serde_urlencoded = "0.7.1"                                         # for url encoding
sha1 = "0.10.1"                                                    # hashing
tokio = { version = "1.23.0", features = ["full"] }                # async http requests
